# sybil-embeddings

./: .gitignore  README.md  pyproject.toml  usage.ipynb
src/sybil_embeddings/: __init__.py
src/sybil_embeddings/models/: instructor.py
src/sybil_embeddings/preprocessing/: __init__.py  chunking.py  preprocess_models.py
src/sybil_embeddings/sql/: default_queries.py  local_db.py
